Добавлена возможность создавать группы для смайлов

--- a/VkBot.Manager/VkBot.Manager.csproj
+++ b/VkBot.Manager/VkBot.Manager.csproj
@@ -5,6 +5,13 @@
     <UserSecretsId>aspnet-VkBot.Manager-F9D954B9-D177-4903-B602-8124D5014909</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Data\Migrations\20180915102443_AddedEmojiGroupIdToEmojiEntity.cs" />
+    <Compile Remove="Data\Migrations\20180915102443_AddedEmojiGroupIdToEmojiEntity.Designer.cs" />
+    <Compile Remove="Data\Migrations\20180915102822_AddedEmojiGroupIdToEmojiEntity.cs" />
+    <Compile Remove="Data\Migrations\20180915102822_AddedEmojiGroupIdToEmojiEntity.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
